fixed text alignment

--- a/wp-content/themes/guten-child/style.css
+++ b/wp-content/themes/guten-child/style.css
@@ -85,13 +85,7 @@ h2.tribe-events-visuallyhidden {
 div#primary {
   border-radius: 10px !important;
   margin-right: 0;
-  text-align: center;
   width: 100%;
-}
-
-/* main main block containing the other main blocks */
-div#content {
-  text-align: center;
 }
 
 /* export button styling */
